specs/blueprints/errors/validation/missing_flag.eno
# Querying the document for a required but missing flag 

-- input

-- input

-- javascript
parse(input).requiredFlag('flag');
-- javascript

-- php
Enolib\Parser::parse($input)->requiredFlag('flag');
-- php

-- python
enolib.parse(input).required_flag('flag')
-- python

-- ruby
Enolib.parse(input).required_flag('flag')
-- ruby

## ValidationError

-- text
The flag 'flag' is missing - in case it has been specified look for typos and also check for correct capitalization.
-- text

-- snippet
   Line | Content
 ?    1 | 
-- snippet

selection: [0,0] => [0,0]

# Querying a section for a required but missing flag 

-- input
# section
-- input

-- javascript
parse(input).section('section').requiredFlag('flag');
-- javascript

-- php
Enolib\Parser::parse($input)->section('section')->requiredFlag('flag');
-- php

-- python
enolib.parse(input).section('section').required_flag('flag')
-- python

-- ruby
Enolib.parse(input).section('section').required_flag('flag')
-- ruby

## ValidationError

-- text
The flag 'flag' is missing - in case it has been specified look for typos and also check for correct capitalization.
-- text

-- snippet
   Line | Content
 *    1 | # section
-- snippet

selection: [0,9] => [0,9]
